Thay đỏi login và thêm Quản lý user

--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -156,6 +156,9 @@ desired effect
                             <li>
                                 @Html.ActionLink("Sản Phẩm", "Products", "ShopManagement")
                             </li>
+                            <li>
+                                @Html.ActionLink("Quản lý người dùng", "Index", "User")
+                            </li>
                         </ul>
                     </li>
                 </ul>
