--- a/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
@@ -67,11 +67,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="col-md-3 top-info-cart text-right mt-lg-4">
                     <ul class="cart-inner-info">
-                        <li class="button-log">
-                            <a class="btn-open" href="#">
-                                <span class="fa fa-user" aria-hidden="true"></span>
-                            </a>
-                        </li>
+                        @Html.Partial("_LoginPartial")
+                        @*<li class="button-log">
+            <a class="btn-open" href="">
+                <span class="fa fa-user" aria-hidden="true"></span>
+            </a>
+        </li>*@
                         <li class="galssescart galssescart2 cart cart box_1">
                             <form action="#" method="post" class="last">
                                 <input type="hidden" name="cmd" value="_cart">
@@ -83,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </form>
                         </li>
                     </ul>
-                    <!---->
+                    <!---
                     <div class="overlay-login text-left">
                         <button type="button" class="overlay-close1">
                             <i class="fa fa-times" aria-hidden="true"></i>
@@ -109,7 +110,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                                 </form>
                             </div>
-                            <!---->
+                            
                         </div>
                     </div>
                     <!---->
