--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/ShopManagement/AddProduct.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/ShopManagement/AddProduct.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Add Product</h2>
-
+<div>
+    @Html.ActionLink("Trở lại", "Products")
+</div>
 
 @using (Html.BeginForm("AddProduct", "ShopManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -61,15 +63,22 @@
 </div>
 }
 
-<div>
-    @Html.ActionLink("Trở lại", "Products")
-</div>
+
 
 @section Scripts {
     <script src="~/Content/ckeditor/ckeditor.js"></script>
 
     <script>
-        CKEDITOR.replace("Decription");
+        CKEDITOR.replace("Decription", {
+            filebrowserBrowseUrl: '/ckfinder/ckfinder.html',
+            filebrowserImageBrowseUrl: '/ckfinder/ckfinder.html?type=Images',
+            filebrowserFlashBrowseUrl: '/ckfinder/ckfinder.html?type=Flash',
+            filebrowserUploadUrl:
+                '/ckfinder/core/connector/aspx/connector.aspx?command=QuickUpload&type=Files&currentFolder=/archive/',
+            filebrowserImageUploadUrl:
+                '/ckfinder/core/connector/aspx/connector.aspx?command=QuickUpload&type=Images&currentFolder=/cars/',
+            filebrowserFlashUploadUrl: '/ckfinder/core/connector/aspx/connector.aspx?command=QuickUpload&type=Flash'
+        });
     </script>
     <script>
 
