--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/ShopManagement/Products.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/ShopManagement/Products.cshtml
@@ -106,7 +106,7 @@
             */
 
             $("a.delete").click(function () {
-                if (!confirm("Confirm product deletion")) return false;
+                if (!confirm("Bạn có chắt muốn xóa sản phẩm này không?")) return false;
             });
 
             //////////////////////////////////////////////////////////////
