Add logo , thêm page about

--- a/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
@@ -46,7 +46,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <header>
             <div class="row">
                 <div class="col-md-3 top-info text-left mt-lg-4">
-                    <h6>Bỏ logo zô đây</h6>
+                    <ul>
+                        <li>
+                            <h1 id="logo"><img src="~/Images/Logo.jpg" id="logoImg" style="width:30%;height:30%;" /></h1>
+                        </li>
+                    </ul>
                     <ul>
                         <li>
                             <i class="fas fa-phone"></i>
