--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/PageManagement/AddPage.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/PageManagement/AddPage.cshtml
@@ -21,7 +21,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.TopicId)
                 @Html.DropDownListFor(model => model.TopicId, Model.topics, "Chọn danh mục bài viết", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.TopicId, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Title)
