--- a/C#/shanuMVCUserRoles/Views/Home/About.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Home/About.cshtml
@@ -1,7 +1,32 @@
-﻿@{
+﻿@model shanuMVCUserRoles.Models.Pages.PageViewModel
+@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<!--/product right-->
+<script type="text/javascript">
+    $(document).ready(function () {
 
-<p>Use this area to provide additional information.</p>
+        $.ajax({
+            type: "POST",
+            url: "/Home/GetPage",
+            dataType: "json",
+            success: function (response) {
+                $("#pageBody").html(response);
+            },
+            failure: function (response) {
+                alert(response.responseText);
+            },
+            error: function (response) {
+                alert(response.responseText);
+            }
+        });
+    });
+</script>
+<div class="tether-target-attached-center">
+    <div class="wrapper_top_shop">
+        <div id="pageBody"></div>
+    </div>
+</div>
+<!--//product right-->
+
+
