--- a/C#/shanuMVCUserRoles/Views/Cart/Index.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Cart/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<!-- banner -->
+﻿@using shanuMVCUserRoles.Models.Cart
+@model List<CartViewModel>
+
+<!-- banner -->
 <div class="banner_inner">
     <div class="services-breadcrumb">
         <div class="inner_breadcrumb">
@@ -20,112 +23,69 @@
     <div class="container">
         <div class="inner-sec-shop px-lg-4 px-3">
             <h3 class="tittle-w3layouts my-lg-4 mt-3">Checkout </h3>
-            <div class="checkout-right">
-                <h4>
-                    Your shopping cart contains:
-                    <span>3 Products</span>
-                </h4>
-                <table class="timetable_sub">
-                    <thead>
-                        <tr>
-                            <th>SL No.</th>
-                            <th>Product</th>
-                            <th>Quantity</th>
-                            <th>Product Name</th>
-
-                            <th>Price</th>
-                            <th>Remove</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="rem1">
-                            <td class="invert">1</td>
-                            <td class="invert-image">
-                                <a href="single.html">
-                                    <img src="~/Content/images/s1.jpg" alt=" " class="img-responsive">
-                                </a>
-                            </td>
-                            <td class="invert">
-                                <div class="quantity">
-                                    <div class="quantity-select">
-                                        <div class="entry value-minus">&nbsp;</div>
-                                        <div class="entry value">
-                                            <span>1</span>
-                                        </div>
-                                        <div class="entry value-plus active">&nbsp;</div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="invert">Irayz Butterfly </td>
-
-                            <td class="invert">$281.00</td>
-                            <td class="invert">
-                                <div class="rem">
-                                    <div class="close1"> </div>
-                                </div>
-
-                            </td>
-                        </tr>
-                        <tr class="rem2">
-                            <td class="invert">2</td>
-                            <td class="invert-image">
-                                <a href="single.html">
-                                    <img src="~/Content/images/s5.jpg" alt=" " class="img-responsive">
-                                </a>
-                            </td>
-                            <td class="invert">
-                                <div class="quantity">
-                                    <div class="quantity-select">
-                                        <div class="entry value-minus">&nbsp;</div>
-                                        <div class="entry value">
-                                            <span>1</span>
-                                        </div>
-                                        <div class="entry value-plus active">&nbsp;</div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="invert">Fastrack Aviator </td>
-
-                            <td class="invert">$325.00</td>
-                            <td class="invert">
-                                <div class="rem">
-                                    <div class="close2"> </div>
-                                </div>
-
-                            </td>
-                        </tr>
-                        <tr class="rem3">
-                            <td class="invert">3</td>
-                            <td class="invert-image">
-                                <a href="single.html">
-                                    <img src="~/Content/images/s2.jpg" alt=" " class="img-responsive">
-                                </a>
-                            </td>
-                            <td class="invert">
-                                <div class="quantity">
-                                    <div class="quantity-select">
-                                        <div class="entry value-minus">&nbsp;</div>
-                                        <div class="entry value">
-                                            <span>1</span>
-                                        </div>
-                                        <div class="entry value-plus active">&nbsp;</div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="invert">Opium (Grey)</td>
-
-                            <td class="invert">$325.00</td>
-                            <td class="invert">
-                                <div class="rem">
-                                    <div class="close3"> </div>
-                                </div>
-
-                            </td>
-                        </tr>
-
-                    </tbody>
-                </table>
-            </div>
+            @if (Model.Count() > 0)
+            {
+                <div class="checkout-right">
+                    <h4>
+                        Your shopping cart contains:
+                        <span>@Model.Count() Products</span>
+                    </h4>
+                    <table class="timetable_sub">
+                        <thead>
+                            <tr>
+                                <th>SL No.</th>
+                                <th>Product</th>
+                                <th>Quantity</th>
+                                <th>Product Name</th>
+                                <th>Price</th>
+                                <th>Remove</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @{
+                                var i = 0;
+                                foreach (var item in Model)
+                                {
+                                    <tr class="my-rem-@i">
+                                        <td class="invert">1</td>
+                                        <td class="invert-image">
+                                            <a href="single.html">
+                                                <img src="../../Images/Products/@item.ProductId/@item.Image" alt="" class="img-responsive">
+                                            </a>
+                                        </td>
+                                        <td class="invert">
+                                            <div class="quantity">
+                                                <div class="quantity-select">
+                                                    <div class="entry value-minus" data-id="@i">&nbsp;</div>
+                                                    <div class="entry value">
+                                                        <span class="sbmincart-quantity last">@item.Quantity</span>
+                                                        <input type="hidden" value="@item.ProductId" />
+                                                    </div>
+                                                    <div class="entry value-plus active" data-id="@i">&nbsp;</div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="invert">@item.ProductName </td>
+                                        <td class="invert">
+                                            <span class="value-price-@i">@item.Price VNĐ</span>
+                                        </td>
+                                        <td class="invert">
+                                            <div class="rem">
+                                                <div class="close1 remove-row" data-id="@i"> </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                        i++;
+                                    }
+                                }
+                        </tbody>
+                    </table>
+                </div>
+            }
+            else
+            {
+                <h3>Giỏ hàng trống!</h3>
+            }
             <div class="checkout-left row">
                 <div class="col-md-4 checkout-left-basket">
                     <h4>Continue to basket</h4>
@@ -239,47 +199,3 @@
 			});
 		});
 </script>
-<!--quantity-->
-<script>
-		$('.value-plus').on('click', function () {
-			var divUpd = $(this).parent().find('.value'),
-				newVal = parseInt(divUpd.text(), 10) + 1;
-			divUpd.text(newVal);
-		});
-
-		$('.value-minus').on('click', function () {
-			var divUpd = $(this).parent().find('.value'),
-				newVal = parseInt(divUpd.text(), 10) - 1;
-			if (newVal >= 1) divUpd.text(newVal);
-		});
-</script>
-<!--quantity-->
-<!--close-->
-<script>
-		$(document).ready(function (c) {
-			$('.close1').on('click', function (c) {
-				$('.rem1').fadeOut('slow', function (c) {
-					$('.rem1').remove();
-				});
-			});
-		});
-</script>
-<script>
-		$(document).ready(function (c) {
-			$('.close2').on('click', function (c) {
-				$('.rem2').fadeOut('slow', function (c) {
-					$('.rem2').remove();
-				});
-			});
-		});
-</script>
-<script>
-		$(document).ready(function (c) {
-			$('.close3').on('click', function (c) {
-				$('.rem3').fadeOut('slow', function (c) {
-					$('.rem3').remove();
-				});
-			});
-		});
-</script>
-<!--//close-->
