--- a/C#/shanuMVCUserRoles/Views/Page/Index.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Page/Index.cshtml
@@ -73,7 +73,7 @@
                         {
                             <div class="pageList special-sec1">
                                 <div class="img-deals">
-                                    <img src="images/s1.jpg" alt="">
+                                    <img src="~/Images/Logo.jpg" alt="">
                                 </div>
                                 <div class="img-deal1">
                                     <h3 style="cursor:pointer" data-id="@item.Id">@item.Title</h3>
