--- a/C#/shanuMVCUserRoles/Views/Shop/Index.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shop/Index.cshtml
@@ -49,7 +49,8 @@
                                                         <div class="grid_meta">
                                                             <div class="product_price">
                                                                 <h4>
-                                                                    @Html.ActionLink(@item.Name, "ProductDetails", "Shop", new { id = @item.Id }, new { })
+                                                                    @item.Name
+                                                                    @*@Html.ActionLink(@item.Name, "ProductDetails", "Shop", new { id = @item.Id }, new { })*@
                                                                 </h4>
                                                                 <div class="grid-price mt-2">
                                                                     <span class="money ">@item.Price VND</span>
@@ -141,10 +142,11 @@
                                                             <div class="grid_meta">
                                                                 <div class="product_price">
                                                                     <h4>
-                                                                        <a href="single.html">Fastrack Aviator </a>
+                                                                        @*<a href="single.html">Fastrack Aviator </a>*@
+                                                                        @item.Name
                                                                     </h4>
                                                                     <div class="grid-price mt-2">
-                                                                        <span class="money ">$325.00</span>
+                                                                        <span class="money ">@item.Price VND</span>
                                                                     </div>
                                                                 </div>
                                                                 <ul class="stars">
@@ -178,9 +180,10 @@
                                                             <div class="googles single-item hvr-outline-out">
                                                                 <form action="#" method="post">
                                                                     <input type="hidden" name="cmd" value="_cart">
-                                                                    <input type="hidden" name="add" value="1">
-                                                                    <input type="hidden" name="googles_item" value="Fastrack Aviator">
-                                                                    <input type="hidden" name="amount" value="325.00">
+                                                                    <input type="hidden" name="add" value="-1">
+                                                                    <input type="hidden" name="googles_item" value="@item.Name">
+                                                                    <input type="hidden" name="amount" value="@item.Price">
+                                                                    <input type="hidden" name="productid" value="@item.Id">
                                                                     <button type="submit" class="googles-cart pgoogles-cart">
                                                                         <i class="fas fa-cart-plus"></i>
                                                                     </button>
