--- a/C#/shanuMVCUserRoles/Views/Account/ForgotPassword.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Account/ForgotPassword.cshtml
@@ -3,26 +3,26 @@
     ViewBag.Title = "Quên mật khẩu?";
 }
 
-<div style="margin-bottom: 100px">
-    <div class="login p-5 bg-dark mx-auto mw-100" style="left:50%; width:50%;">
-        @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h4 style="color:#ff4e00;">Vui lòng nhập email</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                </div>
+<div class="row">
+    <div class="col-md-8" style="margin:auto">
+        <section id="loginForm">
+            <div class="login p-5 bg-dark mx-auto mw-100" style="margin-bottom:2%">
+                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4 style="color:#ff4e00;">Vui lòng nhập email</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                        <div>
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary submit mb-4">Xác Nhận</button><br />
+                }
             </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <button type="submit" class="btn btn-primary submit mb-4">Xác Nhận</button>
-                </div>
-            </div>
-        }
+        </section>
     </div>
 </div>
 
