--- a/C#/shanuMVCUserRoles/Views/Account/Login.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Account/Login.cshtml
@@ -1,43 +1,45 @@
 ﻿@using shanuMVCUserRoles.Models
 @model LoginViewModel
 
-<section id="loginForm">
-    <div style="margin-bottom: 100px">
-        <div class="login p-5 bg-dark mx-auto mw-100" style="left:50%; width:50%;">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4 style="color:#ff4e00;">Đăng Nhập</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <form action="#" method="post" style="margin: auto">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "mb-2" })
-                        <div>
-                            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                            <small id="emailHelp" class="form-text text-muted">Chúng tôi sẽ không bao giờ chia sẻ email của bạn với bất kỳ ai khác.</small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "mb-2" })
-                        <div>
-                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
-                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-check mb-2">
-                        @Html.EditorFor(model => model.RememberMe)
-                        @Html.ValidationMessageFor(model => model.RememberMe, "", new { @class = "text-danger" })
-                        <label class="form-check-label" for="exampleCheck1">Lưu mật khẩu</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary submit mb-4">Đăng nhập</button><br />
-                    <p>
-                        @Html.ActionLink("Quên mật khẩu?", "ForgotPassword")
-                    </p>
-                </form>
-            }
-        </div>
+<div class="row">
+    <div class="col-md-8" style="margin:auto">
+        <section id="loginForm">
+            <div class="login p-5 bg-dark mx-auto mw-100" style="margin-bottom:2%">
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4 style="color:#ff4e00;">Đăng Nhập</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <form action="#" method="post" style="margin: auto">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "mb-2" })
+                                <div>
+                                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                                    <small id="emailHelp" class="form-text text-muted">Chúng tôi sẽ không bao giờ chia sẻ email của bạn với bất kỳ ai khác.</small>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "mb-2" })
+                                <div>
+                                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-check mb-2">
+                                @Html.EditorFor(model => model.RememberMe)
+                                @Html.ValidationMessageFor(model => model.RememberMe, "", new { @class = "text-danger" })
+                                <label class="form-check-label" for="exampleCheck1">Lưu mật khẩu</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary submit mb-4">Đăng nhập</button><br />
+                            <p>
+                                @Html.ActionLink("Quên mật khẩu?", "ForgotPassword")
+                            </p>
+                        </form>
+                }
+            </div>
+        </section>
     </div>
-</section>
+</div>
 @Scripts.Render("~/bundles/jqueryval")
