--- a/C#/shanuMVCUserRoles/Views/Account/ResetPassword.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Account/ResetPassword.cshtml
@@ -3,40 +3,40 @@
     ViewBag.Title = "Reset password";
 }
 
-<div style="margin-bottom: 100px">
-    <div class="login p-5 bg-dark mx-auto mw-100" style="left:50%; width:50%;">
-
-        @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h4 style="color:#ff4e00;">Reset your password.</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Code)
-            <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-10">
+<div class="row">
+    <div class="col-md-8" style="margin:auto">
+        <section id="loginForm">
+            <div class="login p-5 bg-dark mx-auto mw-100" style="margin-bottom:2%">
+                @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4 style="color:#ff4e00;">Reset your password.</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.Code)
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        </div>
+                    </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Reset</button><br />
-                </div>
+                }
             </div>
-        }
+        </section>
     </div>
 </div>
+
 @Scripts.Render("~/bundles/jqueryval")
